# picodb

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  picodb  run.sh  setup.sh
.issues/: 001-mid-value-truncation-corruption.md  002-corrupted-vlen-evicts-all-data.md  003-writer-thread-silent-death.md  004-device-file-as-aof-causes-startup-hang.md  005-aof-rewrite-dos-ratelimit.md  006-no-aof-magic-number.md  007-ttl-exact-second-replay.md
bench/: loadgen.rs
examples/: client.js  client.py
src/: dashboard.html  docs.html  main.rs
tests/: test_aof.py  test_aof_adversarial.py  test_picodb.py
